Fix wrap margin bottom

--- a/assets/styles/geral.css
+++ b/assets/styles/geral.css
@@ -298,7 +298,7 @@ aside .titulo {
 	margin-top: 0;
 }
 .wrap {
- 	margin: 80px auto 280px;
+ 	margin: 80px auto 320px;
 	background: url('../images/back_content.jpg');
 }
 
@@ -1352,9 +1352,6 @@ form .pesquisar {
 .footer-icones li:hover {
 	color: #98ab28;
 }
-.error404 .wrap { 
-	margin-bottom: 320px
-}
 
 img.alignright {
 	float:right;
@@ -1447,7 +1444,7 @@ img.aligncenter {
 	    background-color: #e97200;
 	}
 	.wrap {
-		margin: 0 auto 300px;
+		margin: 0 auto 355px;
 	}
 	.cycle-slideshow {
 		height: 438px;
@@ -1491,7 +1488,7 @@ img.aligncenter {
 		height: 250px;
 	}
 	.wrap {
-		margin-bottom: 205px;
+		margin-bottom: 250px;
 	}
 	.cycle-slideshow li img {
 	    min-width: 750px;
@@ -1639,7 +1636,7 @@ img.aligncenter {
 	    height: 60px;
 	}
 	.wrap {
-		margin-bottom: 300px;
+		margin-bottom: 335px;
 	}
 	.cycle-slideshow {
 		height: 434px;
@@ -1683,7 +1680,7 @@ img.aligncenter {
 		height: 250px;
 	}
 	.wrap {
-    	margin-bottom: 205px;
+    	margin-bottom: 240px;
 	}
 	.cycle-slideshow {
 		height: 300px;
@@ -1953,7 +1950,7 @@ img.aligncenter {
 	    height: 221px;
 	}
 	.wrap {
-    	margin-bottom: 185px;
+    	margin-bottom: 220px;
 	}
 	.cycle-slideshow .bd {
 		width: 330px
